--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,5 +5,6 @@
     <body>
         <h1>Welcome to <%= title%></h1>
         <p>This web is created by using ExpressJS with EJS view engine.</p>
+        <p>Source is available at: <a href="https://github.com/putuyuwono/testing">Github</a> </p>
     </body>
 </html>
